--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 <div class="row  justify-content-between">
                     <div class="col-lg-3 col-md-4 col-sm-8">
                          <div class="single-footer-caption mb-30">
-                              <!-- logo -->
+                              <!-- logooo -->
                              <div class="footer-logo">
                                  <a href="index.html"><img src="assets/img/logo/logo2_footer.jpeg" alt=""></a>
                              </div>
