--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                              <!-- Form -->
                              <div class="footer-form">
                                  <div id="mc_embed_signup">
-                                     <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
+                                     <form target="_blank" action="https://saharukh.us19.list-manage.com/subscribe/post?u=0241ce8e3a14b322a887f07d1&amp;id=1e44c41f65" method="get" class="subscribe_form relative mail_part" novalidate="true">
                                          <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '">
                                          <div class="form-icon">
                                              <button type="submit" name="submit" id="newsletter-submit" class="email_icon newsletter-submit button-contactForm"><img src="assets/img/shape/form_icon.png" alt=""></button>
