--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                                 <nav>
                                     <ul id="navigation">    
                                         <li class="active"><a href="index.html"> Home</a></li>
-                                        <li><a href="">Feature</a></li>
+                                        <li><a href="#Feature">Feature</a></li>
                                         <li><a href="#team">Team</a></li>
-                                        <li><a href="">Download </a></li>
+                                        <li><a href="#Download">Download </a></li>
                                         <!-- <li><a href="#">Pages</a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">Blog</a></li>
@@ -142,7 +142,7 @@
         <!-- Slider Area End -->
         <!-- Best Features Start -->
         <section class="best-features-area section-padd4">
-            <div class="container">
+            <div class="container" id="Feature">
                 <div class="row justify-content-end">
                     <div class="col-xl-8 col-lg-10">
                         <!-- Section Tittle -->
@@ -209,7 +209,7 @@
             </div>
         </section>
         <!-- Best Features End -->
-        <!-- Services Area Start -->
+        <!-- team Area Start -->
         <section class="service-area sky-blue section-padding2">
             <div class="container" id="team">
                 <!-- Section Tittle -->
@@ -313,9 +313,9 @@
             </div>
         </section>
         <!-- Services Area End -->
-        <!-- Applic App Start -->
+        <!-- petspital App Start -->
         <div class="applic-apps section-padding2">
-            <div class="container-fluid">
+            <div class="container-fluid" id="Download">
                 <div class="row">
                     <!-- slider Heading -->
                     <div class="col-xl-4 col-lg-4 col-md-8">
