--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                          <div class="single-footer-caption mb-30">
                               <!-- logooo -->
                              <div class="footer-logo">
-                                 <a href="index.html"><img src="assets/img/logo/logo2_footer.jpeg" alt=""></a>
+                                 <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
                              </div>
                              <div class="footer-tittle">
                                  <div class="footer-pera">
