--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/logo.png" alt="" >
+                    <img src="assets/img/logo/thaba.png" alt="" >
                 </div>
             </div>
         </div>
@@ -95,6 +95,8 @@
                                     <!-- <span data-animation="fadeInUp" data-delay=".4s">App Landing Page</span> -->
                                     <h1 data-animation="fadeInUp" data-delay=".6s">Everything that<br>your need for your pet</h1>
                                     <p data-animation="fadeInUp" data-delay=".8s">Petspital is Bangladesh's first pet alliance app where you can get 24 hour online service for your beloved furry buddy. </p>
+
+                                    
                                     <!-- Slider btn -->
                                    <div class="slider-btns">
                                         <!-- Hero-btn -->
@@ -139,6 +141,7 @@
                 </div> 
             </div>
         </div>
+        
         <!-- Slider Area End -->
         <!-- Best Features Start -->
         <section class="best-features-area section-padd4">
@@ -597,7 +600,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-8">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Newsletter</h4>
+                                <h4>Get Update</h4>
                                 <div class="footer-pera footer-pera2">
                                  <p>submit you email for early notification  </p>
                              </div>
