--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-8">
                         <div class="single-cases-info mb-30">
                             <h3>Petspital Apps<br> Screenshot</h3>
-                            <p>Petspital is Bangladesh's first pet alliance app where you can get 24 hour online service for your beloved furry buddy. We are committed to delivering the best solution possible through our app. </p>
+                            <p>Petspital is the first ever launched pet solution app in Bangladesh. You'll get sincere services easily staying at home. We are a dedicated team at your assistance. We care about how much you love your little companions. They are so important to you and that's why we offer you the best feasible options.  </p>
                         </div>
                     </div>
                     <!-- OwL -->
