image change of sa

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         <div class="col-md-4 col-sm-6">
                             <div class="our-team">
                                 <div class="pic">
-                                    <img src="/assets/img/team/SA.jpg">
+                                    <img src="/assets/img/team/SA.jpeg">
                                 </div>
                                 <div class="team-content">
                                     <h3 class="title">S A Saharukh</h3>
