--- a/index.html
+++ b/index.html
@@ -327,15 +327,15 @@
         <section class="service-area sky-blue section-padding2">
             <div class="container" id="team">
                 <!-- Section Tittle -->
-                <div class="row d-flex justify-content-center">
+                <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-6">
                         <div class="section-tittle text-center">
                             <h2>Our Beloved Founders <br>of Petspital</h2>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Section caption -->
-                <div class="container">
+                <!-- <div class="container">
                     <div class="row">
                         <div class="col-md-4 col-sm-6">
                             <div class="our-team">
@@ -427,8 +427,8 @@
                         </div>
                     </div>
                 </div> -->
-                    </div>
-        </section>
+                    <!-- </div> --> 
+        <!-- </section> -->
         <!-- Services Area End -->
         <!-- petspital App Start -->
         <div class="applic-apps section-padding2">
@@ -617,12 +617,12 @@
                     <div class="col-xl-5 col-lg-6">
                         <div class="app-caption">
                             <div class="section-tittle section-tittle3">
-                                <h2>Our App Will be Available For Andriod soon <br> Get Notification</h2>
+                                <h2>Our App is available on Play Store<br>We are also working on iOS Version</h2>
                                 <!-- <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore fug.</p> -->
                                 <div class="app-btn">
-                                    <a href="https://play.google.com/store/apps/details?id=com.petspital.app"
+                                    <a href="https://play.google.com/store/apps/details?id=app.petspital.user" target="_blank"
                                         class="app-btn1"><img src="assets/img/shape/app_btn2.png" alt=""></a>
-                                    <a href="#" class="app-btn2"><img src="assets/img/shape/app_btn1.png" alt=""></a>
+                                    <!-- <a href="#" class="app-btn2"><img src="assets/img/shape/app_btn1.png" alt=""></a> -->
                                 </div>
                             </div>
                         </div>
