--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                                     <ul id="navigation">
                                         <li class="active"><a href="index.html"> Home</a></li>
                                         <li><a href="#Feature">Feature</a></li>
-                                        <li><a href="#team">Team</a></li>
-                                        <li><a href="#Download">Download </a></li>
+                                        <!-- <li><a href="#team">Team</a></li> -->
+                                        <li><a href="https://play.google.com/store/apps/details?id=app.petspital.user" target="_blank">Download </a></li>
                                         <!-- <li><a href="#">Pages</a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">Blog</a></li>
@@ -68,7 +68,7 @@
                                                 <li><a href="elements.html">Element</a></li>
                                             </ul>
                                         </li> -->
-                                        <li><a href="https://www.facebook.com/petspitalapp">Contact</a></li>
+                                        <li><a href="https://www.facebook.com/petspitalapp" target="_blank">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
